--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       the `--base-href` argument provided to `flutter build`.
     -->
     <!--  <base href="/">-->
-    <base href="/">
-    <!--  <base href="/flutter_dental/">-->
+<!--    <base href="/">-->
+      <base href="/flutter_dental/">
 
     <meta charset="UTF-8">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -39,7 +39,7 @@
      application. For more information, see:
      https://developers.google.com/web/fundamentals/primers/service-workers -->
 <script>
-    const serviceWorkerVersion = "3867858063";
+    const serviceWorkerVersion = "105519546";
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
