--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     -->
     <!--  <base href="/">-->
 <!--    <base href="/">-->
-      <base href="/flutter_dental/">
+      <base href="/dental/">
 
     <meta charset="UTF-8">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -28,18 +28,18 @@
     <meta name="apple-mobile-web-app-title" content="flutter_dental">
     <link rel="apple-touch-icon" href="icons/Icon-192.png">
     <!-- Mapbox -->
-    <script src='https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js'></script>
+<!--    <script src='https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js'></script>-->
 
     <title>flutter_dental</title>
     <link rel="manifest" href="manifest.json">
 </head>
 <body>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8mYzA3fpnl_mY-L2p9OfkDv443YcgxzI"></script>
+<!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8mYzA3fpnl_mY-L2p9OfkDv443YcgxzI"></script>-->
 <!-- This script installs service_worker.js to provide PWA functionality to
      application. For more information, see:
      https://developers.google.com/web/fundamentals/primers/service-workers -->
 <script>
-    const serviceWorkerVersion = "532316091";
+    const serviceWorkerVersion = "3321998861";
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
