--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
 
     <meta charset="UTF-8">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-    <meta name="description" content="A new Flutter project.">
+    <meta name="description" content="Advanced Dental Clinic">
 
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="flutter_dental">
+    <meta name="apple-mobile-web-app-title" content="Apex Dent">
     <link rel="apple-touch-icon" href="icons/Icon-192.png">
     <!-- Mapbox -->
 <!--    <script src='https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js'></script>-->
 
-    <title>flutter_dental</title>
+    <title>Apex Dent</title>
     <link rel="manifest" href="manifest.json">
 </head>
 <body>
@@ -39,7 +39,7 @@
      application. For more information, see:
      https://developers.google.com/web/fundamentals/primers/service-workers -->
 <script>
-    const serviceWorkerVersion = "3274728131";
+    const serviceWorkerVersion = "3641300192";
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
